--- a/app/src/main/res/layout/menu_right.xml
+++ b/app/src/main/res/layout/menu_right.xml
@@ -20,7 +20,7 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/notes1"
+            android:id="@+id/presentacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
@@ -29,7 +29,7 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/notes2"
+            android:id="@+id/formativas"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
