Nuevos cambios en foco de actividades formativas e imagenes de calendarios.

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,4 +7,5 @@
     <color name="menu">#006df8</color>
     <color name="subtitle">#ff666666</color>
     <color name="background_splash">#304aee</color>
+    <color name="spinners">#dedede</color>
 </resources>
