--- a/app/src/main/res/layout/activity_actformativas.xml
+++ b/app/src/main/res/layout/activity_actformativas.xml
@@ -2,9 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
     android:orientation="vertical"
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"
     tools:context=".ui.ActividadesFormativasActivity">
+    <!--
+    Para evitar el foco en el edittext de búsqueda en el layou superior
+    android:descendantFocusability="beforeDescendants"
+    android:focusableInTouchMode="true"-->
 
     <include layout="@layout/menu_top" />
     <!--Línea entre el título y el layout de los combos -->
@@ -14,13 +19,12 @@
         android:layout_height="1dp"
         android:background="#ffadadad"/>
 
-
-
     <!--SPINNERS TIPO PRESENCIAL-->
     <!--android:layout_height="wrap_content" para que solo ocupe tamaño combos-->
     <LinearLayout
         android:id="@+id/layoutSpinners"
         android:layout_width="match_parent"
+        android:background="@color/spinners"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <!--android:layout_width="0dp" misma medida en ancho-->
@@ -54,8 +58,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="2"
-        android:background="#dedede">
+        android:background="@color/spinners"
+        android:weightSum="2">
 
         <!--fecha de Inicio-->
         <LinearLayout
@@ -91,14 +95,12 @@
                     android:textColor="#000000"
                     android:gravity="center_vertical|center_horizontal" />
                 <ImageButton
-                    android:background="#dedede"
                     android:id="@+id/imagenCalendarFI"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/selectstartdate"
-                    android:cropToPadding="false"
                     android:src="@drawable/calendar"
-                    android:layout_gravity="left" />
+                    android:padding="0dp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -145,8 +147,8 @@
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/selectenddate"
                     android:src="@drawable/calendar"
-                    android:background="#dedede"
-                    android:layout_gravity="left" />
+                    android:layout_gravity="left"
+                    android:padding="0dp"/>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -194,12 +196,4 @@
         android:divider="#00000000"
         ptr:ptrHeaderTextColor="#ff444444"
         />
-    <LinearLayout
-
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        android:layout_width="0px"
-        android:layout_height="0px" >
-        <requestFocus />
-    </LinearLayout>
 </LinearLayout>
