--- a/app/src/main/res/layout/menu_top.xml
+++ b/app/src/main/res/layout/menu_top.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="45dp"
     android:background="@color/menu">
@@ -7,10 +8,10 @@
     <ImageView
         android:id="@+id/back"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:paddingLeft="15dp"
-        android:src="@drawable/bck_arrow" />
+        android:layout_centerInParent="true"
+        android:background="@drawable/back_arrow_btn_selector" />
 
     <TextView
         android:id="@+id/title"
@@ -25,12 +26,30 @@
         android:singleLine="true"
         android:maxLength="40"
         android:textStyle="bold" />
-
+<!--
     <ImageView
         android:id="@+id/btnrightmenu"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:src="@drawable/list" />
+-->
+<!--
+    <Button
+        android:id="@+id/btnrightmenu"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:background="@drawable/menu_btn_selector"
+        android:enabled="true" />
+-->
+    <ImageView
+        android:id="@+id/btnrightmenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:background="@drawable/menu_btn_selector"
+        />
 
 </RelativeLayout>
