--- a/app/src/main/res/layout/activity_detalle_actividad.xml
+++ b/app/src/main/res/layout/activity_detalle_actividad.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context="es.jcyl.cee.cylford.app.cyldigital.ui.DetalleActividadActivity">
+    tools:context=".ui.DetalleActividadActivity">
 
     <include layout="@layout/menu_top" />
 
@@ -35,49 +35,44 @@
             android:id="@+id/centro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp"
             android:layout_toRightOf="@id/imagen"
-            android:fontFamily="sans-serif-light"
             android:text="Online"
-            android:textColor="#ffa10620"
-            android:textSize="15sp" />
+            android:textColor="@color/texto_centro_detalle"
+            android:fontFamily="sans-serif-light"
+            style="@style/texto_actividad_detalle"/>
 
         <TextView
             android:id="@+id/fecha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/centro"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/imagen"
-            android:fontFamily="sans-serif-light"
             android:text="Comienza el 4 de Marzo del 2014"
-            android:textColor="#ff999999"
-            android:textSize="15sp" />
+            android:textColor="@color/texto_fecha_curso"
+            android:fontFamily="sans-serif-light"
+            style="@style/texto_actividad_detalle"/>
 
         <TextView
             android:id="@+id/duration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/fecha"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/imagen"
-            android:fontFamily="sans-serif-light"
             android:text="300 horas"
-            android:textColor="#ff333333"
-            android:textSize="15sp" />
+            android:textColor="@color/texto_duracion_curso"
+            android:fontFamily="sans-serif-light"
+            style="@style/texto_actividad_detalle"/>
     </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Descripción"
-        android:layout_marginLeft="5dp"
+        android:text="@string/titulo_descripción"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_margin="10dp"
         android:id="@+id/textView"
         android:textStyle="bold"
-        android:textSize="14sp" />
+        android:textColor="@color/text" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -91,13 +86,11 @@
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="5dp"
-                android:layout_toRightOf="@id/icon"
                 android:fontFamily="sans-serif-light"
                 android:text="Descripción de la actividad"
-                android:textColor="#ff333333"
-                android:textSize="12sp" />
+                android:textColor="@color/text"
+                android:layout_margin="10dp"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
             <Button
                 android:id="@+id/link"
                 android:layout_width="match_parent"
@@ -105,7 +98,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginTop="20dp"
-                android:textColor="#ffffffff"
+                android:textColor="#000000"
                 android:fontFamily="sans-serif-light"
                 android:text="@string/content_link"
                 android:textSize="14sp" />
